<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".activities.DetailJasaActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">
        <ImageView
            android:id="@+id/imgJasa"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:scaleType="fitXY"
            android:contentDescription="@string/app_name" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nama_jasa"
            android:textSize="12sp"
            android:layout_marginTop="30dp"/>
        <TextView
            android:id="@+id/tvNamaJasa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nama_jasa"
            android:textSize="16sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/penyedia"
            android:textSize="12sp"
            android:layout_marginTop="16dp"/>
        <TextView
            android:id="@+id/tvPenyedia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/penyedia"
            android:textSize="16sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kontak"
            android:textSize="12sp"
            android:layout_marginTop="16dp"/>
        <TextView
            android:id="@+id/tvKontak"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kontak"
            android:textSize="16sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/newrating"
            android:textSize="12sp"
            android:layout_marginTop="16dp"/>
        <TextView
            android:id="@+id/tvRating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rating"
            android:textSize="16sp"
            android:textStyle="bold|italic"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/deskripsi_singkat"
            android:textSize="12sp"
            android:layout_marginTop="16dp"/>
        <TextView
            android:id="@+id/tvDeskripsiSingkat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/deskripsi_singkat"
            android:textSize="14sp"
            android:textStyle="italic"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/uraian_deskripsi"
            android:textSize="12sp"
            android:layout_marginTop="16dp"/>
        <TextView
            android:id="@+id/tvUraianDeskripsi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/uraian_deskripsi"
            android:textSize="14sp"
            android:textStyle="normal"
            android:layout_marginBottom="20dp"/>
    </LinearLayout>

</ScrollView>