<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".activities.AddJasaActivity">

    <ScrollView
        android:id="@+id/svData"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/llButton"
        android:layout_marginBottom="16dp">
        <LinearLayout
            android:id="@+id/llData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tvNamaJasa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etNamaJasa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nama_jasa" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tvDeskripsiSingkat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etDeskripsiSingkat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/deskripsi_singkat"
                    android:inputType="textCapSentences|textMultiLine"
                    android:maxLines="3"
                    android:minLines="2"
                    android:gravity="top"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tvUraianDeskripsi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etUraianDeskripsi"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="top"
                    android:hint="@string/uraian_deskripsi"
                    android:inputType="textCapSentences|textMultiLine"
                    android:maxLines="5"
                    android:minLines="4"/>
            </com.google.android.material.textfield.TextInputLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginBottom="10dp">
                <TextView
                    android:id="@+id/tvJudulRating"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/default_rating"
                    android:textSize="16sp"
                    android:gravity="center_vertical"
                    android:layout_marginStart="5dp" />
                <TextView
                    android:id="@+id/tvRating"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/nol"
                    android:textSize="16sp"
                    android:gravity="center_vertical"
                    android:layout_marginStart="5dp"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/llImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/btnCari"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cari"
                    android:layout_weight="0.2"
                    android:background="@drawable/button_style4"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    android:paddingStart="10dp"
                    android:paddingEnd="20dp"
                    android:drawableEnd="@drawable/ic_baseline_search_24"/>
                <TextView
                    android:id="@+id/tvImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pilih_gambar"
                    android:textSize="16sp"
                    android:layout_weight="0.8"
                    android:layout_marginStart="10dp"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />
            </LinearLayout>
            <ImageView
                android:id="@+id/imgJasa"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:scaleType="fitXY"
                android:contentDescription="@string/app_name" />
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:id="@+id/llButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal">
        <Button
            android:id="@+id/btnAddJasa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tambah_jasa"
            android:background="@drawable/button_style2"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:paddingStart="10dp"
            android:paddingEnd="20dp"
            android:drawableEnd="@drawable/ic_baseline_add_24"/>
    </LinearLayout>

</RelativeLayout>